avance del afiche 04-09-2023

--- a/index.html
+++ b/index.html
@@ -6,36 +6,42 @@
     <title>Afiche</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
+<body class="body">
 
     <div class="header">
 
         <div class="title">
-            <h1>Title</h1>
+            <h1>Convocatorio de curso de desarrollo web</h1>
         </div>
 
         <div class="description">
-            <h3>Description</h3>
+            <h3>Te interesa aprender sobre desarrollo web ?</h3>
+            <p>
+              Esta es tu oportunidad de aprender sobre desarrollo web, en un curso intensivo full stack 
+              de 6 meses en el cual aprenderas como crear paginas web y aplicaciones.
+            </p>
         </div>
 
     </div>
 
     <div class="main">
 
+        <div class="prueba">
+
         <div class="sidebar">
 
             <div class="image-Box">
 
                 <div id="image1">
-                    <img src="" alt="Image1">
+                    <img src="/Afiche-Muni/img/imagen1.jpg" alt="Image1">
                 </div>
 
                 <div id="image2">
-                    <img src="" alt="Image2">
+                    <img src="/Afiche-Muni/img/imagen2.jpg" alt="Image2">
                 </div>
 
                 <div id="image3">
-                    <img src="" alt="Image3">
+                    <img src="/Afiche-Muni/img/imagen3.webp" alt="Image3">
                 </div>
 
             </div>
@@ -43,40 +49,75 @@
         </div>
 
         <div class="main-Box">
-            <div class="carrusel"></div>
-            <div class="video"></div>
+
+            <div class="carrusel">
+                <img src="/Afiche-Muni/img/muchachos2.jpg" alt="carrusel">
+            </div>
+
+            <div class="video">
+                <img src="/Afiche-Muni/img/Video-Motivacional.png" alt="video">
+            </div>
+
         </div>
+
+    </div>
 
     </div>
 
     <div class="footer">
 
-        <div>
+        <div class="footer-Box">
 
             <div id="logo1">
-                <img src="" alt="logo1">
+                <img src="/Afiche-Muni/img/logo-muni.png" alt="logo1">
+                <!-- <P>LOGO</P> -->
             </div>
 
             <div id="inscription-Contact">
 
                 <div  class="message-Inscrib">
 
-                    <div>
+                    <div id="message-Motiv">
                         <h3>Mensaje motivacional</h3>
                     </div>
 
-                    <div>
-                        <button>Inscribete</button>
+                    <div id="button-Box">
+
+                        <div id="button-Ins">
+                            <button>Inscribete</button>
+                        </div>
+
                     </div>
 
-                    <h4>Contactos</h4>
-
                 </div>
+
+                <h4>Contactos</h4>
+
+                <p>
+                    Central telefónica: 2547 6000
+                </p>
+
+                <p>
+                    WhatsApp: 8817-5186
+                </p>
+
+                <p>
+                    Contacto de Sitio:
+                </p>
+
+                <p>
+                    Lic. Rafael Arias Fallas <br>
+                    Comunicación Institucional
+                </p>
+
+                <p>
+                    rharias@msj.go.cr
+                </p>
 
             </div>
 
             <div id="logo2">
-                <img src="" alt="logo2">
+                <img src="/Afiche-Muni/img/logo2-corto.png" alt="logo2">
             </div>
 
         </div>
